# emotional_support_robot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_document_chunks_table.py  e2e1c4519c86_initial_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  breathing.py  chat.py  dependency.py  deps.py  emotions.py  legal.py  profile.py
backend/app/core/: encryption.py  exceptions.py  logging.py  middleware.py  perf_logger.py  prompts.py  rate_limit.py  security.py
backend/app/models/: __init__.py  base.py  conversation.py  document_chunk.py  emotion_entry.py  knowledge_base.py  message.py  profile.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  breathing.py  chat.py  dependency.py  emotion.py  profile.py  user.py
backend/app/services/: admin_service.py  ai_service.py  auth_service.py  breathing_service.py  chat_service.py  cleanup_service.py  crisis_detector.py  dependency_detector.py  emotion_service.py  profile_service.py  rag_service.py
backend/data/: breathing_exercises.json  crisis_contacts.json
backend/tests/: conftest.py  test_api_auth.py  test_api_breathing.py  test_api_health.py  test_auth_service.py  test_breathing_service.py  test_chat_service.py  test_crisis_detector.py  test_emotion_service.py  test_encryption.py  test_logging.py  test_security.py
docker/nginx/: nginx.conf  nginx.prod.conf
docker/nginx/ssl/: README.md
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  auth.ts  breathing.ts  chat.ts  client.ts  emotions.ts
frontend/src/hooks/: useBreathingTimer.ts  useTheme.ts  useWebSocket.ts
frontend/src/pages/: AdminDashboard.tsx  BreathingPage.tsx  ChatPage.tsx  EmotionDiaryPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PrivacyPolicyPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SurveyPage.tsx  (+1 more)
(+41 files in other folders)
