[project]
name = "emotional_support_bot"
version = "0.1.0"
description = "Віртуальний робот для емоційної підтримки користувачів на основі технологій штучного інтелекту"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.30.0",
    "sentence-transformers>=3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.2.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.5.0",
    "redis[hiredis]>=5.0.0",
    "cryptography>=43.0.0",
    "google-generativeai>=0.8.6",
    "langchain-google-genai>=4.2.1",
    "pypdf>=6.10.2",
    "docx2txt>=0.9",
    "langchain-text-splitters>=1.1.1",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "debugpy>=1.8.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=backend/app --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
